# rtems-cmake-extension

./: LICENSE  README.md  bootstrap.py  build.py
cmake/RTEMS/: CMakeLists.txt
cmake/RTEMS/cmake/checks/: CheckRtemsCpuSupported.cmake  CheckRtemsFunctionExists.cmake  CheckRtemsGccSanity.c  CheckRtemsGccSanity.cmake  CheckRtemsNetworking.cmake  CheckRtemsNewlib.cmake  CheckRtemsPosixApi.cmake  CheckRtemsSmp.cmake  CheckRtemsTypeExists.cmake  CheckRtemsTypeSize.cmake  RunRtemsChecks.cmake
cmake/RTEMS/cmake/config/: config.h.in  cpuopts.h.in  version-vc-key.h.in
cmake/RTEMS/cmake/find/: RtemsConfig.cmake.in
cmake/RTEMS/cmake/toolchain/: amd64.cmake  arm1136js.cmake  arm7tdmi.cmake  arm920.cmake  armcortexa9.cmake  atsamv.cmake  av5282.cmake  br_uid.cmake  eZKit533.cmake  gen68360.cmake  gen68360_040.cmake  generic_or1k.cmake  gensh2.cmake  gensh4.cmake  hurricane.cmake  imx7.cmake  jmr3904.cmake  leon2.cmake  leon3.cmake  lm32_evr.cmake  lm32_evr_gdbsim.cmake  lpc1768_mbed_ahb_ram_eth.cmake  lpc32xx_phycore.cmake  lpc40xx_ea_rom_int.cmake  mcf5206elite.cmake  mcf5235.cmake  mcp750.cmake  milkymist.cmake  mpc5566evb.cmake  mpc8260ads.cmake  mrm332.cmake  mvme162lx.cmake  mvme167.cmake  mvme5500.cmake  nios2_iss.cmake  nucleo-stm32f746zg.cmake  nucleo-stm32f7xx.cmake  pc386.cmake  pc486.cmake  pc586-sse.cmake  (+24 more)
cmake/RTEMS/cmake/toolchain/old/: COBRA5475.cmake  TLL6527M.cmake  arm1136jfs.cmake  at697f.cmake  beagleboneblack.cmake  beatnik.cmake  brs6l.cmake  csb350.cmake  csb360.cmake  epiphany_sim.cmake  erc32.cmake  gensh1.cmake  gr712rc.cmake  gr740.cmake  (+40 more)
(+9 files in other folders)
